Closed Bug 2008915 Opened 12 days ago Closed 4 days ago

Perma [Tier 2] /builds/worker/checkouts/gecko/dom/base/Element.cpp:X: error: loop variable 'element' creates a copy from type 'const RefPtr<mozilla::dom::Element>' [-Werror=range-loop-construct]

Categories

(Firefox Build System :: General, defect, P5)

defect

Tracking

(firefox-esr140 unaffected, firefox146 unaffected, firefox147 unaffected, firefox148 unaffected, firefox149 fixed)

RESOLVED FIXED
149 Branch
Tracking Status
firefox-esr140 --- unaffected
firefox146 --- unaffected
firefox147 --- unaffected
firefox148 --- unaffected
firefox149 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: alice, NeedInfo)

References

(Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=542534423&repo=mozilla-central&task=TKi-sBgYT1OrpkgRqb5rgg.0
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/TKi-sBgYT1OrpkgRqb5rgg/runs/0/artifacts/public/logs/live_backing.log


INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/glean/bindings/Labeled.h:250: note: adding '-flarge-source-files' will allow for more column-tracking support, at the expense of compilation time and memory
[task 2026-01-07T09:13:50.937+00:00] 09:13:50     INFO -  In file included from Unified_cpp_dom_base2.cpp:65:
[task 2026-01-07T09:13:50.937+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/dom/base/Element.cpp: In member function 'mozilla::Maybe<nsTArray<RefPtr<mozilla::dom::Element> > > mozilla::dom::Element::GetAttrAssociatedElementsInternal(nsAtom*, bool)':
[task 2026-01-07T09:13:50.938+00:00] 09:13:50    ERROR -  /builds/worker/checkouts/gecko/dom/base/Element.cpp:2063: error: loop variable 'element' creates a copy from type 'const RefPtr<mozilla::dom::Element>' [-Werror=range-loop-construct]
[task 2026-01-07T09:13:50.938+00:00] 09:13:50     INFO -   2063 |   for (const RefPtr<Element> element : elements) {
[task 2026-01-07T09:13:50.938+00:00] 09:13:50     INFO -        |
[task 2026-01-07T09:13:50.939+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/dom/base/Element.cpp:2063: note: use reference type to prevent copying
[task 2026-01-07T09:13:50.939+00:00] 09:13:50     INFO -  In file included from /builds/worker/checkouts/gecko/layout/generic/nsIFrame.h:53,
[task 2026-01-07T09:13:50.940+00:00] 09:13:50     INFO -                   from /builds/worker/checkouts/gecko/dom/base/nsIContentInlines.h:17,
[task 2026-01-07T09:13:50.940+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/EditorBase.h:33,
[task 2026-01-07T09:13:50.940+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/TextEditor.h:9,
[task 2026-01-07T09:13:50.941+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/HTMLTextAreaElement.h:13,
[task 2026-01-07T09:13:50.941+00:00] 09:13:50     INFO -                   from /builds/worker/checkouts/gecko/dom/base/DirectionalityUtils.cpp:35,
[task 2026-01-07T09:13:50.941+00:00] 09:13:50     INFO -                   from Unified_cpp_dom_base2.cpp:11:
[task 2026-01-07T09:13:50.942+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/base/FrameProperties.h: In instantiation of 'static mozilla::FrameProperties::PropertyType<T> mozilla::FrameProperties::ReinterpretHelper<T>::FromInternalValue(uint64_t) [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; uint64_t = long unsigned int]':
[task 2026-01-07T09:13:50.942+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/base/FrameProperties.h:200:51:   required from 'mozilla::FrameProperties::PropertyType<T> mozilla::FrameProperties::Get(mozilla::FrameProperties::Descriptor<T>, bool*) const [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; mozilla::FrameProperties::Descriptor<T> = const mozilla::FramePropertyDescriptor<mozilla::SmallValueHolder<mozilla::FrameBidiData> >*]'
[task 2026-01-07T09:13:50.943+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/generic/nsIFrame.h:4463:27:   required from 'mozilla::FrameProperties::PropertyType<T> nsIFrame::GetProperty(mozilla::FrameProperties::Descriptor<T>, bool*) const [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; mozilla::FrameProperties::Descriptor<T> = const mozilla::FramePropertyDescriptor<mozilla::SmallValueHolder<mozilla::FrameBidiData> >*]'
[task 2026-01-07T09:13:50.943+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/generic/nsIFrame.h:1590:50:   required from here
[task 2026-01-07T09:13:50.943+00:00] 09:13:50  WARNING -  /builds/worker/checkouts/gecko/layout/base/FrameProperties.h:301:13: warning: 'void* memcpy(void*, const void*, size_t)' copying an object of non-trivial type 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<mozilla::FrameBidiData> >' {aka 'struct mozilla::FrameBidiData'} from an array of 'uint64_t' {aka 'long unsigned int'} [-Wclass-memaccess]
[task 2026-01-07T09:13:50.943+00:00] 09:13:50     INFO -    301 |       memcpy(&value, &aInternalValue, sizeof(value));
[task 2026-01-07T09:13:50.943+00:00] 09:13:50     INFO -        |       ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2026-01-07T09:13:50.944+00:00] 09:13:50     INFO -  In file included from /builds/worker/checkouts/gecko/dom/base/nsIContentInlines.h:17,
[task 2026-01-07T09:13:50.944+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/EditorBase.h:33,
[task 2026-01-07T09:13:50.945+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/TextEditor.h:9,
[task 2026-01-07T09:13:50.945+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/HTMLTextAreaElement.h:13,
[task 2026-01-07T09:13:50.946+00:00] 09:13:50     INFO -                   from /builds/worker/checkouts/gecko/dom/base/DirectionalityUtils.cpp:35,
[task 2026-01-07T09:13:50.946+00:00] 09:13:50     INFO -                   from Unified_cpp_dom_base2.cpp:11:
[task 2026-01-07T09:13:50.946+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/generic/nsIFrame.h:433:8: note: 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<mozilla::FrameBidiData> >' {aka 'struct mozilla::FrameBidiData'} declared here
[task 2026-01-07T09:13:50.947+00:00] 09:13:50     INFO -    433 | struct FrameBidiData {
[task 2026-01-07T09:13:50.947+00:00] 09:13:50     INFO -        |        ^~~~~~~~~~~~~
[task 2026-01-07T09:13:50.948+00:00] 09:13:50     INFO -  In file included from /builds/worker/checkouts/gecko/layout/generic/nsIFrame.h:53,
[task 2026-01-07T09:13:50.948+00:00] 09:13:50     INFO -                   from /builds/worker/checkouts/gecko/dom/base/nsIContentInlines.h:17,
[task 2026-01-07T09:13:50.948+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/EditorBase.h:33,
[task 2026-01-07T09:13:50.949+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/TextEditor.h:9,
[task 2026-01-07T09:13:50.949+00:00] 09:13:50     INFO -                   from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/HTMLTextAreaElement.h:13,
[task 2026-01-07T09:13:50.949+00:00] 09:13:50     INFO -                   from /builds/worker/checkouts/gecko/dom/base/DirectionalityUtils.cpp:35,
[task 2026-01-07T09:13:50.949+00:00] 09:13:50     INFO -                   from Unified_cpp_dom_base2.cpp:11:
[task 2026-01-07T09:13:50.950+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/base/FrameProperties.h: In instantiation of 'static mozilla::FrameProperties::PropertyType<T> mozilla::FrameProperties::ReinterpretHelper<T>::FromInternalValue(uint64_t) [with T = mozilla::SmallValueHolder<nsPoint>; mozilla::FrameProperties::PropertyType<T> = nsPoint; uint64_t = long unsigned int]':
[task 2026-01-07T09:13:50.950+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/base/FrameProperties.h:200:51:   required from 'mozilla::FrameProperties::PropertyType<T> mozilla::FrameProperties::Get(mozilla::FrameProperties::Descriptor<T>, bool*) const [with T = mozilla::SmallValueHolder<nsPoint>; mozilla::FrameProperties::PropertyType<T> = nsPoint; mozilla::FrameProperties::Descriptor<T> = const mozilla::FramePropertyDescriptor<mozilla::SmallValueHolder<nsPoint> >*]'
[task 2026-01-07T09:13:50.950+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/generic/nsIFrame.h:4463:27:   required from 'mozilla::FrameProperties::PropertyType<T> nsIFrame::GetProperty(mozilla::FrameProperties::Descriptor<T>, bool*) const [with T = mozilla::SmallValueHolder<nsPoint>; mozilla::FrameProperties::PropertyType<T> = nsPoint; mozilla::FrameProperties::Descriptor<T> = const mozilla::FramePropertyDescriptor<mozilla::SmallValueHolder<nsPoint> >*]'
[task 2026-01-07T09:13:50.951+00:00] 09:13:50     INFO -  /builds/worker/checkouts/gecko/layout/generic/nsIFrameInlines.h:187:0:   required from here
[task 2026-01-07T09:13:50.951+00:00] 09:13:50  WARNING -  /builds/worker/checkouts/gecko/layout/base/FrameProperties.h:301:13: warning: 'void* memcpy(void*, const void*, size_t)' copying an object of non-trivial type 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<nsPoint> >' {aka 'struct nsPoint'} from an array of 'uint64_t' {aka 'long unsigned int'} [-Wclass-memaccess]
[task 2026-01-07T09:13:50.951+00:00] 09:13:50     INFO -    301 |       memcpy(&value, &aInternalValue, sizeof(value));
[task 2026-01-07T09:13:50.951+00:00] 09:13:50     INFO -        |       ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2026-01-07T09:13:50.951+00:00] 09:13:50     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/nsRect.h:17,
[task 2026-01-07T09:13:50.952+00:00] 09:13:50     INFO -                   from /builds/worker/checkouts/gecko/layout/base/Units.h:20,
[task 2026-01-07T09:13:50.952+00:00] 09:13:50     INFO -                   from /builds/worker/checkouts/gecko/dom/base/nsContentUtils.h:26,
[task 2026-01-07T09:13:50.952+00:00] 09:13:50     INFO -                   from /builds/worker/checkouts/gecko/dom/base/DOMStringList.cpp:10,
[task 2026-01-07T09:13:50.952+00:00] 09:13:50     INFO -                   from Unified_cpp_dom_base2.cpp:2:
[task 2026-01-07T09:13:50.952+00:00] 09:13:50     INFO -  /builds/worker/workspace/obj-build/dist/include/nsPoint.h:22:8: note: 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<nsPoint> >' {aka 'struct nsPoint'} declared here
[task 2026-01-07T09:13:50.952+00:00] 09:13:50     INFO -     22 | struct nsPoint : public mozilla::gfx::BasePoint<nscoord, nsPoint> {
[task 2026-01-07T09:13:50.952+00:00] 09:13:50     INFO -        |        ^~~~~~~
[task 2026-01-07T09:13:50.952+00:00] 09:13:50     INFO -  cc1plus: all warnings being treated as errors
[task 2026-01-07T09:13:50.953+00:00] 09:13:50    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:668: Unified_cpp_dom_base2.o] Error 1
[task 2026-01-07T09:13:50.953+00:00] 09:13:50     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/base'
[task 2026-01-07T09:13:50.953+00:00] 09:13:50     INFO -  gmake[4]: Target 'target-objects' not remade because of errors.
[task 2026-01-07T09:13:50.953+00:00] 09:13:50    ERROR -  gmake[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: dom/base/target-objects] Error 2
[task 2026-01-07T09:13:50.953+00:00] 09:13:50     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/security/nss/lib/smime/smime_smime3'
[task 2026-01-07T09:13:50.953+00:00] 09:13:50     INFO -  security/nss/lib/smime/libsmime3.so
[task 2026-01-07T09:13:50.953+00:00] 09:13:50     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/security/nss/lib/smime/smime_smime3'
[task 2026-01-07T09:13:50.953+00:00] 09:13:50     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/security/nss/lib/smime/smime_smime3'
[task 2026-01-07T09:13:50.953+00:00] 09:13:50     INFO -  rm -f ../../../../../dist/bin/libsmime3.so
[task 2026-01-07T09:13:50.953+00:00] 09:13:50     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/security/nss/lib/smime/smime_smime3'
[task 2026-01-07T09:13:51.007+00:00] 09:13:51     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/security/manager/ssl/tests/unit/tlsserver/cmd'
[task 2026-01-07T09:13:51.008+00:00] 09:13:51     INFO -  /builds/worker/.mozbuild/srcdirs/gecko-8a5b87fe5d69/_virtualenvs/build/bin/python -m mozbuild.action.check_binary OCSPStaplingServer
[task 2026-01-07T09:13:51.012+00:00] 09:13:51     INFO -  TEST-PASS | check_binary_compat | OCSPStaplingServer
Flags: needinfo?(alice)
Assignee: nobody → alice
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1981346

Pushed by archaeopteryx@coole-files.de: https://github.com/mozilla-firefox/firefox/commit/e7192b4ab966 https://hg.mozilla.org/integration/autoland/rev/5266cb59286f Revert "Bug 2008915 - Use a reference to RefPtr<Element> for loop variable. r=dom-core,smaug" for causing merge conflicts

Set release status flags based on info from the regressing bug 1981346

Status: ASSIGNED → RESOLVED
Closed: 4 days ago
Resolution: --- → FIXED
Target Milestone: --- → 149 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: