Bug 2008915 - Use a reference to RefPtr<Element> for loop variable. r=dom-core,smaug

Differential Revision: https://phabricator.services.mozilla.com/D278104